--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ aiofiles==23.1.0
 numpy==1.25.2
 opencv-python-headless==4.8.0.74
 pyautogui==0.9.53
-pynput==1.8.8
+pynput>=1.7,<20
 plyer==2.0.0
 openai==0.27.7
